<resources>
    <string name="app_name">Go Citizen</string>

    <!--Form pengajuan-->
    <string name="title">Form pengajuan</string>
    <string name="create">Buat surat</string>
    <string name="hint_fullName">Nama Lengkap</string>
    <string name="hint_birthday">Tanggal Lahir</string>
    <string name="hint_terms">Saya menyetujui ketentuan yang berlaku</string>
    <string name="submitButton">Ajukan Permohonan</string>

    <string-array name="jenis_surat">
        <item>Belum memiliki rumah</item>
        <item>Belum menikah</item>
        <item>Izin bepergian</item>
        <item>Penghasilan tidak tetap</item>
        <item>Tidak keberatan bertetangga</item>
    </string-array>

    <string name="surat_prompt">Pilih jenis surat</string>

    <!-- view surat -->
    <string name="dot">:  </string>
    <string name="download">Download Surat</string>
    <string name="disabled_download">Surat belum tersedia</string>
    <string name="nama">Nama </string>
    <string name="nomor">Nomor </string>
    <string name="keperluan">Keperluan </string>

    <!--navigation item name-->
    <string name="nav_home">Beranda</string>
    <string name="nav_create">Buat Surat</string>
    <string name="nav_saran">Kirim Saran</string>
    <string name="nav_bantuan">Bantuan</string>
    <string name="nav_teleponDarurat">Telepon Darurat</string>
    <string name="nav_logout">Keluar</string>
    <string name="profile">Pengaturan profil</string>

    <!--navigation title bar-->
    <string name="ajukan_permohonan">Ajukan Permohonan</string>
    <string name="bantuan">Bantuan</string>
    <string name="telepon_darurat">Telepon Darurat</string>
    <string name="surat">Surat</string>

    <!-- Toolbar titles when navigation menu item is selected -->
    <string-array name="nav_item_activity_titles">
        <item>Beranda</item>
        <item>Buat Surat</item>
        <item>Movies</item>
        <item>Notifications</item>
        <item>Settings</item>
    </string-array>

    <!--Form saran-->
    <string name="judul">Judul</string>
    <string name="tujuan">Kepada</string>
    <string name="pemerintah">Pemerintah</string>
    <string name="pengembang">Pengembang</string>
    <string name="btnSaran">Kirim Saran</string>

    <!--hint list-->
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="belum_menikah">Belum Menikah</string>
    <string name="penghasilan_tidak_tetap">Penghasilan Tidak Tetap</string>
    <string name="action_settings">Settings</string>
    <string name="belum_memiliki_rumah">Belum Memiliki Rumah</string>
    <string name="tidak_keberatan_tetangga">Tidak Keberatan Tetangga</string>
    <string name="izin_berpergian">Izin Berpergian</string>
    <string name="hint_nik">Nomor Induk Kependudukan</string>
    <string name="hint_email">Email</string>
    <string name="hint_kk">Kartu Keluarga</string>
    <string name="hint_kegiatan_tetangga">Kegiatan</string>
    <string name="hint_ktp">Kartu Tanda Penduduk</string>
    <string name="hint_keperluan_belum_menikah">Keperluan</string>
    <string name="hint_maksud_berpergian">Maksud Berpergian</string>
    <string name="hint_kendaraan_yang_digunakan">Kendaraan yang Digunakan</string>
    <string name="hint_barang_yang_dibawa">Barang yang Dibawa</string>
    <string name="hint_yang_turut_berpergian">Siapa yang Turut Berpergian</string>
    <string name="hint_lama_berpergian">Lama Berpergian</string>
    <string name="hint_tujuan_berpergian">Tujuan</string>
    <string name="hint_keperluan_belum_memiliki_rumah">Keperluan</string>
    <string name="err_nik">Harap Isi Nik Anda</string>
    <string name="err_email">Harap Isi Email Anda</string>
    <string name="err_kegiatan_tetangga">Harap isi Kegiatan Anda</string>
    <string name="err_keperluan_belum_menikah">Harap isi Keperluan Anda</string>
    <string name="err_maksud_berpergian">Harap isi Keperluan Anda</string>
    <string name="err_tujuan_berpergian">Harap isi Tujuan Anda</string>
    <string name="err_lama_berpergian">Harap isi Lama Anda Berpergian</string>
    <string name="err_anggota_berpergian">Harap isi Anggota Berpergian</string>
    <string name="err_barang_berpergian">Harap isi Barang Bawaan Anda</string>
    <string name="err_kendaraan_berpergian">Harap isi Jenis Kendaraan yang Digunakan</string>
    <string name="lacak">Lacak Permohonan</string>

    <!--intor slider strings-->
    <string name="title_activity_welcome">Beranda</string>
    <string name="next">NEXT</string>
    <string name="skip">SKIP</string>
    <string name="start">MULAI</string>

    <string name="slide_1_title">Selamat Datang!</string>
    <string name="slide_1_desc">Cara mudah mengurus perizinan dan surat menyurat!</string>

    <string name="slide_2_title">E-government</string>
    <string name="slide_2_desc">Lebih dekat dengan pemerintah melalui internet</string>

    <string name="slide_3_title">Surat</string>
    <string name="slide_3_desc">Lebih mudah dalam mengajukan surat dan perizinan</string>

    <string name="slide_4_title">Cepat</string>
    <string name="slide_4_desc">Mudah dan cepat dalam pembuatan surat</string>

    <string name="play_again_desc">To see the welcome slider again, goto Settings -> apps -> welcome slider -> clear data</string>
    <string name="play_again">Play Again</string>

    <!--font awesome-->
    <string name="font_awesome_write_icon">&#xf040;</string>
    <string name="title_activity_login">Sign in</string>
    <string name="register_button">Register</string>

    <!-- Strings related to login -->
    <string name="hint_password">Password</string>
    <string name="hint_name">Fullname</string>
    <string name="btn_login">MASUK</string>
    <string name="btn_register">DAFTAR</string>
    <string name="btn_NIK">Nomor KTP</string>
    <string name="btn_upload_KTP">upload KTP</string>
    <string name="btn_upload_KK">upload KK</string>
    <string name="btn_link_to_register">Belum terdaftar? Daftar sekarang.</string>
    <string name="btn_link_to_login">Saya sudah terdaftar! Masuk.</string>
    <string name="welcome">Welcome</string>
    <string name="btn_logout">LOGOUT</string>
    <string name="name">Nama Lengkap</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="title_activity_profil">Profil</string>
</resources>
