<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/background"
    tools:context=".activity.PermohonanActivity"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="15dp"
            android:paddingRight="15dp"
            android:paddingTop="20dp"
            tools:context=".activity.PermohonanActivity">

            <android.support.v7.widget.AppCompatTextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:text="@string/title"
                android:textSize="@dimen/formTitle"
                android:textStyle="bold" />

            <!--Pilihan jenis surat-->
            <Spinner
                android:id="@+id/spinner_surat"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:entries="@array/jenis_surat"
                android:prompt="@string/surat_prompt"
                android:layout_marginTop="20dp"
                />

            <!--input NIK, make it auto fill-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_NIK"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp">

                <EditText
                    android:id="@+id/inputNIK"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_nik"
                    android:inputType="phone"
                    android:maxLines="1"
                    android:textSize="@dimen/font_title" />

            </android.support.design.widget.TextInputLayout>

            <!--auto fill FullName-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_fullName"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_fullName"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_fullName"
                    android:maxLines="1"
                    android:textSize="@dimen/font_title" />

            </android.support.design.widget.TextInputLayout>

            <!--tanggal lahir-->
                <EditText
                    android:id="@+id/input_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_birthday"
                    android:maxLines="1"
                    android:focusable="false"
                    android:layout_marginTop="10dp"
                    android:textSize="@dimen/font_title" />

            <!--fill keterangan-->
            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_comment"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/hint_keperluan_belum_memiliki_rumah"
                    android:maxLines="1"
                    android:textSize="@dimen/font_title" />
            </android.support.design.widget.TextInputLayout>

            <!--<android.support.v7.widget.AppCompatCheckBox-->
                <!--android:layout_width="wrap_content"-->
                <!--android:layout_height="wrap_content"-->
                <!--android:layout_marginTop="10dp"-->
                <!--android:text="@string/hint_terms" />-->

            <Button
                android:id="@+id/buttonSubmit"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:background="@drawable/button"
                android:textColor="@color/list_row_end_color"
                android:text="@string/submitButton" />
        </LinearLayout>
    </ScrollView>
</android.support.design.widget.CoordinatorLayout>