<android.support.design.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:context=".activity.SaranActivity"
    android:background="@color/background"
    app:layout_behavior="@string/appbar_scrolling_view_behavior">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="?attr/colorPrimary"
            app:popupTheme="@style/AppTheme.PopupOverlay"/>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_behavior="@string/appbar_scrolling_view_behavior">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_marginTop="10dp"
            android:layout_marginLeft="10dp"
            android:layout_marginRight="10dp">

            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_judul_saran"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/judul_saran"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/judul" />

            </android.support.design.widget.TextInputLayout>

            <View style="@style/Divider"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:layout_marginTop="10dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:layout_marginTop="5dp"
                    android:text="@string/tujuan"
                    android:textAlignment="center"
                    android:textSize="16sp" />

                <RadioGroup
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:orientation="horizontal"
                    android:layout_marginStart="20dp"
                    android:gravity="center_vertical">

                    <RadioButton
                        android:padding="5dp"
                        android:id="@+id/pemerintah"
                        android:layout_width="0dp"
                        android:layout_weight="0.82"
                        android:layout_height="match_parent"
                        android:text="@string/pemerintah" />

                    <RadioButton
                        android:padding="5dp"
                        android:id="@+id/pengembang"
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:text="@string/pengembang"
                        android:layout_weight="0.12" />
                </RadioGroup>

            </LinearLayout>


            <android.support.design.widget.TextInputLayout
                android:id="@+id/input_layout_keterangan"
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <EditText
                    android:id="@+id/input_keterangan"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Keterangan"
                    tools:ignore="HardcodedText" />

            </android.support.design.widget.TextInputLayout>

            <Button
                android:id="@+id/btnSend"
                android:layout_width="wrap_content"
                android:layout_marginTop="20dp"
                android:layout_gravity="end"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:fontFamily="sans-serif"
                android:text="@string/btnSaran"
                android:background="@drawable/button"
                android:textColor="@color/list_row_start_color"
                android:textStyle="bold"
                android:layout_weight="0.1" />

        </LinearLayout>
    </ScrollView>

</android.support.design.widget.CoordinatorLayout>
